[tool.poetry]
name = "donationalerts-api"
version = "1.0.4"
description = "https://github.com/Fsoky/Donation-Alerts-API-Python"
readme = "README.md"
authors = ["Fsoky Community <cyberuest0x12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
